// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Syslog Snapshot form disabled 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        System logs retention
      </h2>
      <p>
        During device reboot, system logs are lost by default. This option allows to save system logs using Storage plugin. Logs are saved into /srv/log/messages. To enable this option, you have to configure a storage in the 
        <a
          href="/reforis/storage"
          title="Go to Storage plugin"
        >
          Storage plugin
        </a>
         first.
      </p>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            disabled=""
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable system logs retention
          </label>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          disabled=""
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Syslog Snapshot form enabled 1`] = `
<div>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-4"
  >
    <form>
      <h2>
        System logs retention
      </h2>
      <p>
        During device reboot, system logs are lost by default. This option allows to save system logs using Storage plugin. Logs are saved into /srv/log/messages. To enable this option, you have to configure a storage in the 
        <a
          href="/reforis/storage"
          title="Go to Storage plugin"
        >
          Storage plugin
        </a>
         first.
      </p>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            checked=""
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable system logs retention
          </label>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;
